--- a/index.html
+++ b/index.html
@@ -100,31 +100,31 @@
                     <h1>Kennels</h1>
                     <img src="img/3points.svg" class="points3">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="about-kennels.html"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
                     <img src="img/home-icon2.svg" class="icons-a1">
-                    <h1>Kennels</h1>
+                    <h1>Cattery</h1>
                     <img src="img/3points.svg" class="points3">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="about-cattery.html"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
                     <img src="img/home-icon3.svg" class="icons-a1">
-                    <h1>Kennels</h1>
+                    <h1>Grooming</h1>
                     <img src="img/3points.svg" class="points3">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="about-grooming.html"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
                 <div class="col-md-3 col-sm-6 col-xs-6 home_about-icons4">
                     <img src="img/home-icon4.svg" class="icons-a1">
-                    <h1>Kennels</h1>
+                    <h1>Relocation</h1>
                     <img src="img/3points.svg" class="points3">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
-                    <button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="about-relocation"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
             </div>
@@ -268,6 +268,15 @@
             </div>
         </div>
     </footer>
+
+
+
+<!-- popup-Modal -->
+
+
+
+
+<!-- end of the popup -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
