--- a/about-grooming.html
+++ b/about-grooming.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="col-md-4 fs-image-h-button">
                         <img src="img/home-icon3.svg">
-                        <h1>Kennels</h1>
+                        <h1>Grooming</h1>
                         <img src="img/3points.svg" style="width:50px"><br>
                         <button>Book an Appointment</button>
                     </div>
