popups te gjitha te kryera

--- a/about-kennels.html
+++ b/about-kennels.html
@@ -274,8 +274,16 @@
             <div class="col-md-12">
                 <p>Frontline will be given on arrival unless otherwise advised.</p>
             </div>
-            <div class="col-md-12 input-s">
+            <div class="col-md-8 input-s">
                 <input type="text" name="Name" placeholder="Name">
+            </div>
+            <div class="col-md-4" style="padding: 5px 3px 0px 3px">                
+            <select class="select-package">
+                <option value="" selected disabled>Select Package</option>
+                <option value="">A</option>
+                <option value="">B</option>
+                <option value="">C</option>
+            </select>
             </div>
         </div>
 
